k8s/manifests/core-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpulse-core-api
  namespace: cloudpulse
  labels:
    app: cloudpulse-core-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudpulse-core-api
  template:
    metadata:
      labels:
        app: cloudpulse-core-api
    spec:
      containers:
        - name: core-api
          image: ghcr.io/joaobreno4/cloudpulse-core-api:9aecae1
          imagePullPolicy: Always
          ports:
            - containerPort: 5223
          readinessProbe:
            httpGet:
              path: /metrics
              port: 5223
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /metrics
              port: 5223
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: cloudpulse-core-api
  namespace: cloudpulse
spec:
  selector:
    app: cloudpulse-core-api
  ports:
    - port: 5223
      targetPort: 5223
  type: ClusterIP
