k8s/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpulse-frontend
  namespace: cloudpulse
  labels:
    app: cloudpulse-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudpulse-frontend
  template:
    metadata:
      labels:
        app: cloudpulse-frontend
    spec:
      # O segredo criado para autorizar o pull da imagem no GHCR
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/joaobreno4/cloudpulse-frontend:d361e61
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cloudpulse-frontend
  namespace: cloudpulse
spec:
  selector:
    app: cloudpulse-frontend
  ports:
    - port: 80
      targetPort: 80
  # Usamos ClusterIP para roteamento interno via Ingress
  type: ClusterIP
